frontend/tests/cases/negative/badCaseUnify.gr
import Maybe

reflect : forall {a : Type} . Maybe a -> (() -> (a [0..1]) <MayFail>)
reflect mb = 
    case mb of
        None -> (\() -> throw);
        Some x -> (\() -> x)